apps/ezxss/staging/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ezxss-cloudflare
  namespace: ezxss
spec:
  parentRefs:
  - name: ezxss-cloudflare-staging
  hostnames:
  - staging.dm3.in
  rules:
  - backendRefs:
    - name: ezxss
      port: 8080
